// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facet filter nested list item  should render active filter view 1`] = `
<FacetsFilterNestedListItem
  classes={
    Object {
      "inset": "FacetsFilterNestedListItem-inset-3 inset",
      "listItemGutters": "FacetsFilterNestedListItem-listItemGutters-1 listItemGutters",
      "listText": "FacetsFilterNestedListItem-listText-2",
      "selectedFacet": "FacetsFilterNestedListItem-selectedFacet-4 selectedFacet",
    }
  }
  disabled={false}
  index={0}
  isActive={true}
  onFacetClick={[MockFunction]}
  primaryText="Test filter"
/>
`;

exports[`Facet filter nested list item  should render default filter view 1`] = `
<FacetsFilterNestedListItem
  classes={
    Object {
      "inset": "FacetsFilterNestedListItem-inset-3 inset",
      "listItemGutters": "FacetsFilterNestedListItem-listItemGutters-1 listItemGutters",
      "listText": "FacetsFilterNestedListItem-listText-2",
      "selectedFacet": "FacetsFilterNestedListItem-selectedFacet-4 selectedFacet",
    }
  }
  disabled={false}
  index={0}
  isActive={false}
  onFacetClick={[MockFunction]}
  primaryText="Test filter"
/>
`;

exports[`Facet filter nested list item  should render disabled filter view 1`] = `
<FacetsFilterNestedListItem
  classes={
    Object {
      "inset": "FacetsFilterNestedListItem-inset-3 inset",
      "listItemGutters": "FacetsFilterNestedListItem-listItemGutters-1 listItemGutters",
      "listText": "FacetsFilterNestedListItem-listText-2",
      "selectedFacet": "FacetsFilterNestedListItem-selectedFacet-4 selectedFacet",
    }
  }
  disabled={true}
  index={0}
  isActive={true}
  onFacetClick={[MockFunction]}
  primaryText="Test filter"
/>
`;

exports[`Facet filter nested list item  should render inactive filter view 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction],
      "subscribe": [MockFunction],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <MuiThemeProvider
        theme={
          Object {
            "breakpoints": Object {
              "between": [Function],
              "down": [Function],
              "keys": Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ],
              "only": [Function],
              "up": [Function],
              "values": Object {
                "lg": 1280,
                "md": 960,
                "sm": 600,
                "xl": 1920,
                "xs": 0,
              },
              "width": [Function],
            },
            "direction": "ltr",
            "graphs": Object {
              "color1": "#d72865",
              "color2": "#1e7d94",
              "color3": "#49075E",
              "color4": "#468fcc",
              "color5": "#f28620",
              "color6": "#333333",
              "color7": "#595959",
            },
            "hexToRGBA": [Function],
            "mixins": Object {
              "gutters": [Function],
              "toolbar": Object {
                "@media (min-width:0px) and (orientation: landscape)": Object {
                  "minHeight": 48,
                },
                "@media (min-width:600px)": Object {
                  "minHeight": 64,
                },
                "minHeight": 56,
              },
            },
            "overrides": Object {
              "MuiFormLabel": Object {
                "root": Object {
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "100%",
                },
              },
            },
            "palette": Object {
              "accent": Object {
                "dark": "#2a557d",
                "light": "#54acff",
                "main": "#4085C6",
              },
              "action": Object {
                "active": "rgba(0, 0, 0, 0.54)",
                "disabled": "rgba(0, 0, 0, 0.26)",
                "disabledBackground": "rgba(0, 0, 0, 0.12)",
                "hover": "rgba(0, 0, 0, 0.08)",
                "hoverOpacity": 0.08,
                "selected": "rgba(0, 0, 0, 0.14)",
              },
              "augmentColor": [Function],
              "background": Object {
                "default": "#fafafa",
                "paper": "#fff",
              },
              "common": Object {
                "black": "#000",
                "white": "#fff",
              },
              "contrastThreshold": 3,
              "divider": "rgba(0, 0, 0, 0.12)",
              "error": Object {
                "contrastText": "#fff",
                "dark": "#790000",
                "light": "#ff0000",
                "main": "#c80000",
              },
              "getContrastText": [Function],
              "grey": Object {
                "100": "#f5f5f5",
                "200": "#eeeeee",
                "300": "#e0e0e0",
                "400": "#bdbdbd",
                "50": "#fafafa",
                "500": "#9e9e9e",
                "600": "#757575",
                "700": "#616161",
                "800": "#424242",
                "900": "#212121",
                "A100": "#d5d5d5",
                "A200": "#aaaaaa",
                "A400": "#303030",
                "A700": "#616161",
              },
              "primary": Object {
                "contrastText": "#fff",
                "dark": "#3b1a59",
                "gradient": Object {
                  "diagonal": Object {
                    "background": "linear-gradient(135deg, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                    "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                  },
                  "horizontal": Object {
                    "background": "linear-gradient(to right, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                    "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                  },
                },
                "light": "#962A8B",
                "main": "#51247A",
              },
              "secondary": Object {
                "contrastText": "#fff",
                "dark": "#333333",
                "light": "#f2f2f2",
                "main": "#595959",
              },
              "success": Object {
                "dark": "#005000",
                "light": "#00a700",
                "main": "#007200",
              },
              "text": Object {
                "disabled": "rgba(0, 0, 0, 0.38)",
                "hint": "rgba(0, 0, 0, 0.38)",
                "primary": "rgba(0, 0, 0, 0.87)",
                "secondary": "rgba(0, 0, 0, 0.54)",
              },
              "tonalOffset": 0.2,
              "type": "light",
              "warning": Object {
                "dark": "#542400",
                "light": "#ff9a57",
                "main": "#bf5000",
              },
              "white": Object {
                "main": "#FFFFFF",
              },
            },
            "props": Object {},
            "shadows": Array [
              "none",
              "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
              "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
              "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
              "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
              "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
              "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
              "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
              "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
              "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
              "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
              "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
              "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
              "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
              "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
              "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
              "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
              "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
              "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
            ],
            "shape": Object {
              "borderRadius": 4,
            },
            "spacing": Object {
              "unit": 8,
            },
            "status": Object {
              "danger": "#f44336",
              "warning": "#ff9800",
            },
            "transitions": Object {
              "create": [Function],
              "duration": Object {
                "complex": 375,
                "enteringScreen": 225,
                "leavingScreen": 195,
                "short": 250,
                "shorter": 200,
                "shortest": 150,
                "standard": 300,
              },
              "easing": Object {
                "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
              },
              "getAutoHeightDuration": [Function],
            },
            "typography": Object {
              "body1": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 300,
                "letterSpacing": "0.00938em",
                "lineHeight": 1.5,
              },
              "body1Next": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 300,
                "letterSpacing": "0.00938em",
                "lineHeight": 1.5,
              },
              "body2": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.875rem",
                "fontWeight": 300,
                "letterSpacing": "0.01071em",
                "lineHeight": 1.5,
              },
              "body2Next": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.875rem",
                "fontWeight": 300,
                "letterSpacing": "0.01071em",
                "lineHeight": 1.5,
              },
              "button": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.875rem",
                "fontWeight": 400,
                "letterSpacing": "0.02857em",
                "lineHeight": 1.5,
                "textTransform": "uppercase",
              },
              "buttonNext": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.875rem",
                "fontWeight": 400,
                "letterSpacing": "0.02857em",
                "lineHeight": 1.5,
                "textTransform": "uppercase",
              },
              "caption": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.75rem",
                "fontWeight": 300,
                "letterSpacing": "0.03333em",
                "lineHeight": 1.66,
              },
              "captionNext": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.75rem",
                "fontWeight": 300,
                "letterSpacing": "0.03333em",
                "lineHeight": 1.66,
              },
              "display1": Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "2.125rem",
                "fontWeight": 300,
                "lineHeight": "1.20588em",
              },
              "display2": Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "2.8125rem",
                "fontWeight": 300,
                "lineHeight": "1.13333em",
                "marginLeft": "-.02em",
              },
              "display3": Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "3.5rem",
                "fontWeight": 300,
                "letterSpacing": "-.02em",
                "lineHeight": "1.30357em",
                "marginLeft": "-.02em",
              },
              "display4": Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "7rem",
                "fontWeight": 200,
                "letterSpacing": "-.04em",
                "lineHeight": "1.14286em",
                "marginLeft": "-.04em",
              },
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": 14,
              "fontWeightLight": 200,
              "fontWeightMedium": 400,
              "fontWeightRegular": 300,
              "h1": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "6rem",
                "fontWeight": 200,
                "letterSpacing": "-0.01562em",
                "lineHeight": 1,
              },
              "h2": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "3.75rem",
                "fontWeight": 200,
                "letterSpacing": "-0.00833em",
                "lineHeight": 1,
              },
              "h3": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "3rem",
                "fontWeight": 300,
                "letterSpacing": "0em",
                "lineHeight": 1.04,
              },
              "h4": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "2.125rem",
                "fontWeight": 300,
                "letterSpacing": "0.00735em",
                "lineHeight": 1.17,
              },
              "h5": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1.5rem",
                "fontWeight": 300,
                "letterSpacing": "0em",
                "lineHeight": 1.33,
              },
              "h6": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 400,
                "letterSpacing": "0.0075em",
                "lineHeight": 1.6,
              },
              "headline": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1.5rem",
                "fontWeight": 300,
                "lineHeight": "1.35417em",
              },
              "overline": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.75rem",
                "fontWeight": 300,
                "letterSpacing": "0.08333em",
                "lineHeight": 2.66,
                "textTransform": "uppercase",
              },
              "pxToRem": [Function],
              "round": [Function],
              "subheading": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 300,
                "lineHeight": "1.5em",
              },
              "subtitle1": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 300,
                "letterSpacing": "0.00938em",
                "lineHeight": 1.75,
              },
              "subtitle2": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.875rem",
                "fontWeight": 400,
                "letterSpacing": "0.00714em",
                "lineHeight": 1.57,
              },
              "suppressDeprecationWarnings": true,
              "title": Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1.3125rem",
                "fontWeight": 400,
                "lineHeight": "1.16667em",
              },
              "useNextVariants": true,
            },
            "zIndex": Object {
              "appBar": 1100,
              "drawer": 1200,
              "mobileStepper": 1000,
              "modal": 1300,
              "snackbar": 1400,
              "tooltip": 1500,
            },
          }
        }
      >
        <MuiPickersUtilsProvider
          utils={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "locale": undefined,
                    "moment": undefined,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
        >
          <WithStyles(FacetsFilterNestedListItem)
            classes={
              Object {
                "inset": "inset",
                "listItemGutters": "listItemGutters",
                "selectedFacet": "selectedFacet",
              }
            }
            disabled={false}
            index={0}
            isActive={false}
            onFacetClick={[MockFunction]}
            primaryText="Test filter"
          >
            <FacetsFilterNestedListItem
              classes={
                Object {
                  "inset": "FacetsFilterNestedListItem-inset-7 inset",
                  "listItemGutters": "FacetsFilterNestedListItem-listItemGutters-5 listItemGutters",
                  "listText": "FacetsFilterNestedListItem-listText-6",
                  "selectedFacet": "FacetsFilterNestedListItem-selectedFacet-8 selectedFacet",
                }
              }
              disabled={false}
              index={0}
              isActive={false}
              onFacetClick={[MockFunction]}
              primaryText="Test filter"
            >
              <WithStyles(ListItem)
                button={true}
                classes={
                  Object {
                    "gutters": "FacetsFilterNestedListItem-listItemGutters-5 listItemGutters",
                  }
                }
                disabled={false}
                key="facet-filter-nested-item-0"
                onClick={[MockFunction]}
              >
                <ListItem
                  ContainerComponent="li"
                  button={true}
                  classes={
                    Object {
                      "button": "MuiListItem-button-17",
                      "container": "MuiListItem-container-10",
                      "default": "MuiListItem-default-12",
                      "dense": "MuiListItem-dense-13",
                      "disabled": "MuiListItem-disabled-14",
                      "divider": "MuiListItem-divider-15",
                      "focusVisible": "MuiListItem-focusVisible-11",
                      "gutters": "MuiListItem-gutters-16 FacetsFilterNestedListItem-listItemGutters-5 listItemGutters",
                      "root": "MuiListItem-root-9",
                      "secondaryAction": "MuiListItem-secondaryAction-18",
                      "selected": "MuiListItem-selected-19",
                    }
                  }
                  dense={false}
                  disableGutters={false}
                  disabled={false}
                  divider={false}
                  onClick={[MockFunction]}
                  selected={false}
                >
                  <WithStyles(ButtonBase)
                    className="MuiListItem-root-9 MuiListItem-default-12 MuiListItem-gutters-16 FacetsFilterNestedListItem-listItemGutters-5 listItemGutters MuiListItem-button-17"
                    component="div"
                    disabled={false}
                    focusVisibleClassName="MuiListItem-focusVisible-11"
                    onClick={[MockFunction]}
                  >
                    <ButtonBase
                      centerRipple={false}
                      className="MuiListItem-root-9 MuiListItem-default-12 MuiListItem-gutters-16 FacetsFilterNestedListItem-listItemGutters-5 listItemGutters MuiListItem-button-17"
                      classes={
                        Object {
                          "disabled": "MuiButtonBase-disabled-21",
                          "focusVisible": "MuiButtonBase-focusVisible-22",
                          "root": "MuiButtonBase-root-20",
                        }
                      }
                      component="div"
                      disableRipple={false}
                      disableTouchRipple={false}
                      disabled={false}
                      focusRipple={false}
                      focusVisibleClassName="MuiListItem-focusVisible-11"
                      onClick={[MockFunction]}
                      tabIndex="0"
                      type="button"
                    >
                      <div
                        className="MuiButtonBase-root-20 MuiListItem-root-9 MuiListItem-default-12 MuiListItem-gutters-16 FacetsFilterNestedListItem-listItemGutters-5 listItemGutters MuiListItem-button-17"
                        onBlur={[Function]}
                        onClick={[MockFunction]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex="0"
                      >
                        <WithStyles(ListItemText)
                          className="FacetsFilterNestedListItem-listText-6"
                          classes={
                            Object {
                              "inset": "FacetsFilterNestedListItem-inset-7 inset",
                            }
                          }
                          disableTypography={true}
                          inset={true}
                          key=".1"
                        >
                          <ListItemText
                            className="FacetsFilterNestedListItem-listText-6"
                            classes={
                              Object {
                                "dense": "MuiListItemText-dense-25",
                                "inset": "MuiListItemText-inset-24 FacetsFilterNestedListItem-inset-7 inset",
                                "primary": "MuiListItemText-primary-26",
                                "root": "MuiListItemText-root-23",
                                "secondary": "MuiListItemText-secondary-27",
                                "textDense": "MuiListItemText-textDense-28",
                              }
                            }
                            disableTypography={true}
                            inset={true}
                          >
                            <div
                              className="MuiListItemText-root-23 MuiListItemText-inset-24 FacetsFilterNestedListItem-inset-7 inset FacetsFilterNestedListItem-listText-6"
                            >
                              <WithStyles(Typography)
                                color="default"
                                variant="body2"
                              >
                                <Typography
                                  align="inherit"
                                  classes={
                                    Object {
                                      "alignCenter": "MuiTypography-alignCenter-52",
                                      "alignJustify": "MuiTypography-alignJustify-54",
                                      "alignLeft": "MuiTypography-alignLeft-51",
                                      "alignRight": "MuiTypography-alignRight-53",
                                      "body1": "MuiTypography-body1-38",
                                      "body2": "MuiTypography-body2-37",
                                      "button": "MuiTypography-button-40",
                                      "caption": "MuiTypography-caption-39",
                                      "colorError": "MuiTypography-colorError-63",
                                      "colorInherit": "MuiTypography-colorInherit-58",
                                      "colorPrimary": "MuiTypography-colorPrimary-59",
                                      "colorSecondary": "MuiTypography-colorSecondary-60",
                                      "colorTextPrimary": "MuiTypography-colorTextPrimary-61",
                                      "colorTextSecondary": "MuiTypography-colorTextSecondary-62",
                                      "display1": "MuiTypography-display1-33",
                                      "display2": "MuiTypography-display2-32",
                                      "display3": "MuiTypography-display3-31",
                                      "display4": "MuiTypography-display4-30",
                                      "gutterBottom": "MuiTypography-gutterBottom-56",
                                      "h1": "MuiTypography-h1-41",
                                      "h2": "MuiTypography-h2-42",
                                      "h3": "MuiTypography-h3-43",
                                      "h4": "MuiTypography-h4-44",
                                      "h5": "MuiTypography-h5-45",
                                      "h6": "MuiTypography-h6-46",
                                      "headline": "MuiTypography-headline-34",
                                      "noWrap": "MuiTypography-noWrap-55",
                                      "overline": "MuiTypography-overline-49",
                                      "paragraph": "MuiTypography-paragraph-57",
                                      "root": "MuiTypography-root-29",
                                      "srOnly": "MuiTypography-srOnly-50",
                                      "subheading": "MuiTypography-subheading-36",
                                      "subtitle1": "MuiTypography-subtitle1-47",
                                      "subtitle2": "MuiTypography-subtitle2-48",
                                      "title": "MuiTypography-title-35",
                                    }
                                  }
                                  color="default"
                                  gutterBottom={false}
                                  headlineMapping={
                                    Object {
                                      "body1": "p",
                                      "body2": "p",
                                      "display1": "h1",
                                      "display2": "h1",
                                      "display3": "h1",
                                      "display4": "h1",
                                      "h1": "h1",
                                      "h2": "h2",
                                      "h3": "h3",
                                      "h4": "h4",
                                      "h5": "h5",
                                      "h6": "h6",
                                      "headline": "h1",
                                      "subheading": "h3",
                                      "subtitle1": "h6",
                                      "subtitle2": "h6",
                                      "title": "h2",
                                    }
                                  }
                                  noWrap={false}
                                  paragraph={false}
                                  theme={
                                    Object {
                                      "breakpoints": Object {
                                        "between": [Function],
                                        "down": [Function],
                                        "keys": Array [
                                          "xs",
                                          "sm",
                                          "md",
                                          "lg",
                                          "xl",
                                        ],
                                        "only": [Function],
                                        "up": [Function],
                                        "values": Object {
                                          "lg": 1280,
                                          "md": 960,
                                          "sm": 600,
                                          "xl": 1920,
                                          "xs": 0,
                                        },
                                        "width": [Function],
                                      },
                                      "direction": "ltr",
                                      "graphs": Object {
                                        "color1": "#d72865",
                                        "color2": "#1e7d94",
                                        "color3": "#49075E",
                                        "color4": "#468fcc",
                                        "color5": "#f28620",
                                        "color6": "#333333",
                                        "color7": "#595959",
                                      },
                                      "hexToRGBA": [Function],
                                      "mixins": Object {
                                        "gutters": [Function],
                                        "toolbar": Object {
                                          "@media (min-width:0px) and (orientation: landscape)": Object {
                                            "minHeight": 48,
                                          },
                                          "@media (min-width:600px)": Object {
                                            "minHeight": 64,
                                          },
                                          "minHeight": 56,
                                        },
                                      },
                                      "overrides": Object {
                                        "MuiFormLabel": Object {
                                          "root": Object {
                                            "overflow": "hidden",
                                            "textOverflow": "ellipsis",
                                            "whiteSpace": "nowrap",
                                            "width": "100%",
                                          },
                                        },
                                      },
                                      "palette": Object {
                                        "accent": Object {
                                          "dark": "#2a557d",
                                          "light": "#54acff",
                                          "main": "#4085C6",
                                        },
                                        "action": Object {
                                          "active": "rgba(0, 0, 0, 0.54)",
                                          "disabled": "rgba(0, 0, 0, 0.26)",
                                          "disabledBackground": "rgba(0, 0, 0, 0.12)",
                                          "hover": "rgba(0, 0, 0, 0.08)",
                                          "hoverOpacity": 0.08,
                                          "selected": "rgba(0, 0, 0, 0.14)",
                                        },
                                        "augmentColor": [Function],
                                        "background": Object {
                                          "default": "#fafafa",
                                          "paper": "#fff",
                                        },
                                        "common": Object {
                                          "black": "#000",
                                          "white": "#fff",
                                        },
                                        "contrastThreshold": 3,
                                        "divider": "rgba(0, 0, 0, 0.12)",
                                        "error": Object {
                                          "contrastText": "#fff",
                                          "dark": "#790000",
                                          "light": "#ff0000",
                                          "main": "#c80000",
                                        },
                                        "getContrastText": [Function],
                                        "grey": Object {
                                          "100": "#f5f5f5",
                                          "200": "#eeeeee",
                                          "300": "#e0e0e0",
                                          "400": "#bdbdbd",
                                          "50": "#fafafa",
                                          "500": "#9e9e9e",
                                          "600": "#757575",
                                          "700": "#616161",
                                          "800": "#424242",
                                          "900": "#212121",
                                          "A100": "#d5d5d5",
                                          "A200": "#aaaaaa",
                                          "A400": "#303030",
                                          "A700": "#616161",
                                        },
                                        "primary": Object {
                                          "contrastText": "#fff",
                                          "dark": "#3b1a59",
                                          "gradient": Object {
                                            "diagonal": Object {
                                              "background": "linear-gradient(135deg, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                                              "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                                            },
                                            "horizontal": Object {
                                              "background": "linear-gradient(to right, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                                              "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                                            },
                                          },
                                          "light": "#962A8B",
                                          "main": "#51247A",
                                        },
                                        "secondary": Object {
                                          "contrastText": "#fff",
                                          "dark": "#333333",
                                          "light": "#f2f2f2",
                                          "main": "#595959",
                                        },
                                        "success": Object {
                                          "dark": "#005000",
                                          "light": "#00a700",
                                          "main": "#007200",
                                        },
                                        "text": Object {
                                          "disabled": "rgba(0, 0, 0, 0.38)",
                                          "hint": "rgba(0, 0, 0, 0.38)",
                                          "primary": "rgba(0, 0, 0, 0.87)",
                                          "secondary": "rgba(0, 0, 0, 0.54)",
                                        },
                                        "tonalOffset": 0.2,
                                        "type": "light",
                                        "warning": Object {
                                          "dark": "#542400",
                                          "light": "#ff9a57",
                                          "main": "#bf5000",
                                        },
                                        "white": Object {
                                          "main": "#FFFFFF",
                                        },
                                      },
                                      "props": Object {},
                                      "shadows": Array [
                                        "none",
                                        "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
                                        "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
                                        "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
                                        "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
                                        "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
                                        "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
                                        "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
                                        "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
                                        "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
                                        "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
                                        "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
                                        "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
                                        "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
                                        "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
                                        "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
                                        "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
                                        "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
                                        "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
                                        "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
                                        "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
                                        "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
                                        "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
                                        "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
                                        "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
                                      ],
                                      "shape": Object {
                                        "borderRadius": 4,
                                      },
                                      "spacing": Object {
                                        "unit": 8,
                                      },
                                      "status": Object {
                                        "danger": "#f44336",
                                        "warning": "#ff9800",
                                      },
                                      "transitions": Object {
                                        "create": [Function],
                                        "duration": Object {
                                          "complex": 375,
                                          "enteringScreen": 225,
                                          "leavingScreen": 195,
                                          "short": 250,
                                          "shorter": 200,
                                          "shortest": 150,
                                          "standard": 300,
                                        },
                                        "easing": Object {
                                          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                                          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                                          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                                          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                                        },
                                        "getAutoHeightDuration": [Function],
                                      },
                                      "typography": Object {
                                        "body1": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "1rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0.00938em",
                                          "lineHeight": 1.5,
                                        },
                                        "body1Next": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "1rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0.00938em",
                                          "lineHeight": 1.5,
                                        },
                                        "body2": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "0.875rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0.01071em",
                                          "lineHeight": 1.5,
                                        },
                                        "body2Next": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "0.875rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0.01071em",
                                          "lineHeight": 1.5,
                                        },
                                        "button": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "0.875rem",
                                          "fontWeight": 400,
                                          "letterSpacing": "0.02857em",
                                          "lineHeight": 1.5,
                                          "textTransform": "uppercase",
                                        },
                                        "buttonNext": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "0.875rem",
                                          "fontWeight": 400,
                                          "letterSpacing": "0.02857em",
                                          "lineHeight": 1.5,
                                          "textTransform": "uppercase",
                                        },
                                        "caption": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "0.75rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0.03333em",
                                          "lineHeight": 1.66,
                                        },
                                        "captionNext": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "0.75rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0.03333em",
                                          "lineHeight": 1.66,
                                        },
                                        "display1": Object {
                                          "color": "rgba(0, 0, 0, 0.54)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "2.125rem",
                                          "fontWeight": 300,
                                          "lineHeight": "1.20588em",
                                        },
                                        "display2": Object {
                                          "color": "rgba(0, 0, 0, 0.54)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "2.8125rem",
                                          "fontWeight": 300,
                                          "lineHeight": "1.13333em",
                                          "marginLeft": "-.02em",
                                        },
                                        "display3": Object {
                                          "color": "rgba(0, 0, 0, 0.54)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "3.5rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "-.02em",
                                          "lineHeight": "1.30357em",
                                          "marginLeft": "-.02em",
                                        },
                                        "display4": Object {
                                          "color": "rgba(0, 0, 0, 0.54)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "7rem",
                                          "fontWeight": 200,
                                          "letterSpacing": "-.04em",
                                          "lineHeight": "1.14286em",
                                          "marginLeft": "-.04em",
                                        },
                                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                        "fontSize": 14,
                                        "fontWeightLight": 200,
                                        "fontWeightMedium": 400,
                                        "fontWeightRegular": 300,
                                        "h1": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "6rem",
                                          "fontWeight": 200,
                                          "letterSpacing": "-0.01562em",
                                          "lineHeight": 1,
                                        },
                                        "h2": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "3.75rem",
                                          "fontWeight": 200,
                                          "letterSpacing": "-0.00833em",
                                          "lineHeight": 1,
                                        },
                                        "h3": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "3rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0em",
                                          "lineHeight": 1.04,
                                        },
                                        "h4": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "2.125rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0.00735em",
                                          "lineHeight": 1.17,
                                        },
                                        "h5": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "1.5rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0em",
                                          "lineHeight": 1.33,
                                        },
                                        "h6": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "1.25rem",
                                          "fontWeight": 400,
                                          "letterSpacing": "0.0075em",
                                          "lineHeight": 1.6,
                                        },
                                        "headline": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "1.5rem",
                                          "fontWeight": 300,
                                          "lineHeight": "1.35417em",
                                        },
                                        "overline": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "0.75rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0.08333em",
                                          "lineHeight": 2.66,
                                          "textTransform": "uppercase",
                                        },
                                        "pxToRem": [Function],
                                        "round": [Function],
                                        "subheading": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "1rem",
                                          "fontWeight": 300,
                                          "lineHeight": "1.5em",
                                        },
                                        "subtitle1": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "1rem",
                                          "fontWeight": 300,
                                          "letterSpacing": "0.00938em",
                                          "lineHeight": 1.75,
                                        },
                                        "subtitle2": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "0.875rem",
                                          "fontWeight": 400,
                                          "letterSpacing": "0.00714em",
                                          "lineHeight": 1.57,
                                        },
                                        "suppressDeprecationWarnings": true,
                                        "title": Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                          "fontSize": "1.3125rem",
                                          "fontWeight": 400,
                                          "lineHeight": "1.16667em",
                                        },
                                        "useNextVariants": true,
                                      },
                                      "zIndex": Object {
                                        "appBar": 1100,
                                        "drawer": 1200,
                                        "mobileStepper": 1000,
                                        "modal": 1300,
                                        "snackbar": 1400,
                                        "tooltip": 1500,
                                      },
                                    }
                                  }
                                  variant="body2"
                                >
                                  <p
                                    className="MuiTypography-root-29 MuiTypography-body2-37"
                                  >
                                    Test filter
                                  </p>
                                </Typography>
                              </WithStyles(Typography)>
                            </div>
                          </ListItemText>
                        </WithStyles(ListItemText)>
                        <WithStyles(TouchRipple)
                          center={false}
                          innerRef={[Function]}
                        >
                          <TouchRipple
                            center={false}
                            classes={
                              Object {
                                "child": "MuiTouchRipple-child-68",
                                "childLeaving": "MuiTouchRipple-childLeaving-69",
                                "childPulsate": "MuiTouchRipple-childPulsate-70",
                                "ripple": "MuiTouchRipple-ripple-65",
                                "ripplePulsate": "MuiTouchRipple-ripplePulsate-67",
                                "rippleVisible": "MuiTouchRipple-rippleVisible-66",
                                "root": "MuiTouchRipple-root-64",
                              }
                            }
                          >
                            <TransitionGroup
                              childFactory={[Function]}
                              className="MuiTouchRipple-root-64"
                              component="span"
                              enter={true}
                              exit={true}
                            >
                              <span
                                className="MuiTouchRipple-root-64"
                              />
                            </TransitionGroup>
                          </TouchRipple>
                        </WithStyles(TouchRipple)>
                      </div>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </ListItem>
              </WithStyles(ListItem)>
            </FacetsFilterNestedListItem>
          </WithStyles(FacetsFilterNestedListItem)>
        </MuiPickersUtilsProvider>
      </MuiThemeProvider>
    </Router>
  </MemoryRouter>
</Provider>
`;
